[#2650662] Fix general spacing inconsistencies

--- a/agov/themes/agov/agov_base/sass/components/divider/_divider.scss
+++ b/agov/themes/agov/agov_base/sass/components/divider/_divider.scss
@@ -8,7 +8,11 @@
 
 .divider,
 %divider {
-  @include margin(1.6 0);
+  @include margin(2 0);
   border: 0;
   border-top: 10px solid color(border);
+
+  &--less-top {
+    @include margin-top(1);
+  }
 }
