--- a/agov/themes/agov/agov_base/sass/components/footer-top/_footer-top.scss
+++ b/agov/themes/agov/agov_base/sass/components/footer-top/_footer-top.scss
@@ -16,8 +16,8 @@
 %footer-top {
   @include clearfix;
   background-color: color(white-smoke);
-  @include margin-top(3);
-  @include padding-bottom(1);
+  @include margin-top(2);
+  @include padding(1 0 2);
 
   &__menu {
     border-top: 2px solid color('white');
